Fix issues with scrollbar in currency display.

--- a/ui/app/css/itcss/components/currency-display.scss
+++ b/ui/app/css/itcss/components/currency-display.scss
@@ -48,7 +48,6 @@
     display: flex;
     flex: 1;
     max-width: 100%;
-    overflow-x: scroll;
 
     input[type="number"]::-webkit-inner-spin-button {
       -webkit-appearance: none;
